@@ -38,5 +38,5 @@
       }
    },
    "release_status" : "stable",
-   "version" : "0.42"
+   "version" : "0.43"
 }
