@@ -381,6 +381,9 @@ OPTIONS FOR BOTH
 AUTHOR
     Yusuke Kawasaki, http://www.kawa.net/
 
+REPOSITORY
+    https://github.com/kawanet/XML-TreePP
+
 COPYRIGHT
     The following copyright notice applies to all the files provided in this
     distribution, including binary files, unless explicitly noted otherwise.
